--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   }
