--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,5 @@
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://api.emailjs.com;"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
